--- a/Api/style.css
+++ b/Api/style.css
@@ -2,18 +2,25 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), /* optional dark overlay */
+    url('I.jpg') no-repeat bottom center fixed;
   padding: 40px;
   text-align: center;
 }
 
 h1 {
-  color: #333;
+  color: #ffffff;
+}
+
+h3 {
+  color: #ffffff;
 }
 
 form {
-  background-color: #fff;
+  background-color: #464646;
   padding: 20px;
   margin: 0 auto;
+  backdrop-filter: blur(10px);
   display: inline-block;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -35,7 +42,7 @@ input[type="text"] {
 
 input[type="submit"] {
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #08930d;
   color: white;
   border: none;
   border-radius: 5px;
@@ -43,12 +50,20 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #5dff62;
 }
 
 label:last-of-type {
   display: block;
   margin-top: 30px;
   font-weight: bold;
-  color: #006600;
+  color: #ffffff;
+}
+
+p {
+  color: #ffffff;
+  font-size: 25px;
+  backdrop-filter: blur(10px);
+  background-color: #ffffff00;
+  margin-top: 20px;
 }
